--- a/app/views/body/our-services/our-services.pug
+++ b/app/views/body/our-services/our-services.pug
@@ -27,6 +27,7 @@ div.main.main_theme-white-gr
                     h3.unit__title.unit__title_theme-head General Contracting
                     hr.unit__horizontal.unit__horizontal_black-solid
                     p.unit__article.unit__article_theme-text This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.
+                div.unit__arrow.unit__arrow_down
                 div.unit.unit_theme-foto
                     div.unit__number.unit__number_theme-yellow
                         span.unit__number.unit__number_middle 1
@@ -35,6 +36,7 @@ div.main.main_theme-white-gr
                 div.unit.unit_theme-foto
                     div.unit__number.unit__number_theme-yellow
                         span.unit__number.unit__number_middle 2
+                div.unit__arrow.unit__arrow_up
                 div.unit.unit_theme-info
                     h3.unit__title.unit__title_theme-head Project design and engineering
                     hr.unit__horizontal.unit__horizontal_black-solid
@@ -45,6 +47,7 @@ div.main.main_theme-white-gr
                     h3.unit__title.unit__title_theme-head Capital Improvements
                     hr.unit__horizontal.unit__horizontal_black-solid
                     p.unit__article.unit__article_theme-text This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.
+                div.unit__arrow.unit__arrow_down
                 div.unit.unit_theme-foto
                     div.unit__number.unit__number_theme-yellow
                         span.unit__number.unit__number_middle 3
@@ -54,6 +57,7 @@ div.main.main_theme-white-gr
                     h3.unit__title.unit__title_theme-head Construction
                     hr.unit__horizontal.unit__horizontal_black-solid
                     p.unit__article.unit__article_theme-text This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.
+                div.unit__arrow.unit__arrow_down
                 div.unit.unit_theme-foto
                     div.unit__number.unit__number_theme-yellow
                         span.unit__number.unit__number_middle 4
@@ -62,6 +66,7 @@ div.main.main_theme-white-gr
                 div.unit.unit_theme-foto
                     div.unit__number.unit__number_theme-yellow
                         span.unit__number.unit__number_middle 5
+                div.unit__arrow.unit__arrow_up
                 div.unit.unit_theme-info
                     h3.unit__title.unit__title_theme-head Expert Witness
                     hr.unit__horizontal.unit__horizontal_black-solid
@@ -72,6 +77,7 @@ div.main.main_theme-white-gr
                     h3.unit__title.unit__title_theme-head Procurement
                     hr.unit__horizontal.unit__horizontal_black-solid
                     p.unit__article.unit__article_theme-text This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.
+                div.unit__arrow.unit__arrow_down
                 div.unit.unit_theme-foto
                     div.unit__number.unit__number_theme-yellow
                         span.unit__number.unit__number_middle 6
