--- a/app/stylus/main.styl
+++ b/app/stylus/main.styl
@@ -75,7 +75,7 @@ body
   background url("../img/layer-logo.png") no-repeat
   &__text
     color white
-    font-family: Montserrat
+    font-family Montserrat, sans-serif;
     font-size 28px
     font-weight 700
     text-transform uppercase
@@ -84,7 +84,7 @@ body
       display block
       position relative
       top 26px
-      left 28px
+      left 21px
 
 
 /*====================Блок меню==================*/
@@ -133,7 +133,7 @@ body
 
     &_theme-text
       color #363636
-      font-family Montserrat
+      font-family Montserrat, sans-serif;
       font-size 12px
       font-weight 400
 
@@ -154,7 +154,7 @@ body
     top 20px
     left 28px
     color #363636
-    font-family Montserrat
+    font-family Montserrat, sans-serif;
     font-size 28px
     font-weight 400
     text-transform uppercase
@@ -239,21 +239,23 @@ body
     margin-top 0
     &_theme-head
       color #363636
-      font-family Montserrat
+      font-family Montserrat, sans-serif;
       font-size 18px
       font-weight 700
 
     &_theme-head-aside
+      margin-bottom 0
+
       color: #ffffff
-      font-family Montserrat
+      font-family Montserrat, sans-serif;
       font-size 28px
-      font-weight 700
+      font-weight 900
       text-transform uppercase
       letter-spacing 0.18px
 
     &_theme-head-aside-small
       color #ffffff
-      font-family Montserrat
+      font-family Montserrat, sans-serif;
       font-size 18px
       font-weight 400
 
@@ -261,7 +263,7 @@ body
   &__mark
     &_theme-blue-white
       color #8bcffb
-      font-family Montserrat
+      font-family Montserrat, sans-serif;
       font-size 14px
       font-weight 400
 
@@ -269,7 +271,7 @@ body
   &__article
     &_theme-text
       color #989898
-      font-family Montserrat
+      font-family Montserrat, sans-serif;
       font-size 14px
       font-weight 400
       line-height 22px
@@ -291,7 +293,7 @@ body
     &_theme-yellow
       background-color #ffe400
       color #363636
-      font-family Montserrat
+      font-family Montserrat, sans-serif;
       font-size 28px
       font-weight 400
       text-align center
@@ -306,7 +308,7 @@ body
     text-align center
     &_uppercase-text-black
       color #363636
-      font-family Montserrat
+      font-family Montserrat, sans-serif;
       font-size 12px
       font-weight 400
       text-transform uppercase
@@ -330,7 +332,7 @@ body
   //Размещение формы в unit aside
   &__inner-form-aside
     position relative
-    bottom -40px
+    bottom -52px
 
 /*===========================Блок форма==============================*/
 .form
@@ -338,9 +340,9 @@ body
   &__input
 
     &_theme-text
-      font-family Montserrat
+      font-family Montserrat, sans-serif;
       font-size 14px
-      font-weight 400
+      font-weight 600
 
     &_theme-blue-text
       color #59a9d6
@@ -354,9 +356,9 @@ body
   &__submit
 
     &_theme-text
-      font-family Montserrat
+      font-family Montserrat, sans-serif;
       font-size 12px
-      font-weight 400
+      font-weight 600
       text-transform uppercase
 
     &_theme-white-text
@@ -382,7 +384,7 @@ body
 
   &_theme-text
     color #9b9b9b
-    font-family Montserrat
+    font-family Montserrat, sans-serif;
     font-size 12px
     font-weight 400
 
@@ -391,7 +393,7 @@ body
 
   &_theme-text-menu
     color #a2a2a2
-    font-family Montserrat
+    font-family Montserrat, sans-serif;
     font-size 12px
     font-weight 400
   //Элемент для контента футера
