--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -4,6 +4,7 @@ html
         meta(charset="utf-8")
         title My First web app
         link(rel='stylesheet' href='font-awesome-4.7.0/css/font-awesome.min.css')
+        link(href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet")
         link(rel='stylesheet' href='css/main.css')
     body
         // Шапка сайта
