В home_page добавлен информационный блок с названием, текстом и кнопкой

--- a/app/stylus/main.styl
+++ b/app/stylus/main.styl
@@ -204,7 +204,8 @@ body
 
 
 /*!!!!!!=============Информационный блок=======================!!!!!*/
-.unit
+@import "blocks/unit/unit.styl"
+/*.unit
   width 233px
   height 233px
   padding 30px 30px
@@ -425,5 +426,5 @@ body
       display table
       clear both
 
-
-
+/*===============================Блок кнопка============================*/
+@import "blocks/button/button.styl"
