--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -10,6 +10,6 @@ html
         // Шапка сайта
         include header/header.pug
         //Тело сайта
-        include body/our-services/our-services.pug
+        include body/home-page/home-page
         //Футтер
         include footer/footer.pug
