--- a/app/stylus/blocks/button/button.styl
+++ b/app/stylus/blocks/button/button.styl
@@ -15,3 +15,17 @@
 
   &--black-bg
     background-color #363636
+
+  &--white-bg
+    background-color #ffffff
+
+  &--theme-arrow
+    width 30px
+    height 30px
+    border none
+
+  &--arrow-next
+    background url("../img/arr-next.png") no-repeat center
+
+  &--arrow-prev
+    background url("../img/arr-prev.png") no-repeat center
