--- a/app/stylus/blocks/unit/unit.styl
+++ b/app/stylus/blocks/unit/unit.styl
@@ -39,6 +39,31 @@
     &--black-solid
       border solid #363636
 
+  //Элемент для информации
+  &__info
+
+    &--med-text
+      font-size 20px
+      font-weight 600
+      font-family Montserrat, sans-serif;
+
+    &--big-text
+      font-size 36px
+      font-weight 600
+      letter-spacing 3.94px
+      font-family Montserrat, sans-serif;
+      text-transform uppercase
+
+    &--black-text
+      color #363636
+
+  //Элемент info-wrap
+  &__info-wrap
+    display block
+    margin 40px 0
+    text-align center
+
+
   //Элемент article
   &__article
     font-size 14px
@@ -47,6 +72,11 @@
       line-height 22px
       font-family Montserrat, sans-serif;
       color #363636
+
+  //Элемент кнопка по центру по горизонтали
+  &__button-center
+    display block
+    margin 16px auto
 
   //Элемент кнопка в левом нижнем углу
   &__button-buttom-left
