--- a/app/views/body/home-page/home-page.pug
+++ b/app/views/body/home-page/home-page.pug
@@ -6,3 +6,12 @@ div.main.main_theme-white-gr
             hr.unit__horizontal.unit__horizontal--black-solid
             p.unit__article.unit__article--theme-unit-black-text Still other clients have reserved for capital improvement projects and will work directly with our Design and Engineering team.
             input.button.button--theme-unit-btn.button--black-bg.button--text-white.unit__button-buttom-left(type="button", value="Read more")
+
+        div.unit.unit--theme-info
+            input.button.button--theme-arrow.button--arrow-next.button--white-bg.unit__button-center(type="button", value="")
+
+            div.unit__info-wrap
+                span.unit__info.unit__info--big-text.unit__info--black-text 01
+                    sup.unit__info.unit__info--med-text.unit__info--black-text /03
+
+            input.button.button--theme-arrow.button--arrow-prev.button--white-bg.unit__button-center(type="button", value="")
