--- a/app/stylus/blocks/button/button.styl
+++ b/app/stylus/blocks/button/button.styl
@@ -16,6 +16,9 @@
   &--black-bg
     background-color #363636
 
+  &--blue-bg
+    background-color #2297d8
+
   &--white-bg
     background-color #ffffff
 
