--- a/app/stylus/blocks/unit/unit.styl
+++ b/app/stylus/blocks/unit/unit.styl
@@ -14,6 +14,9 @@
   &--theme-yellow
     background-color #ffe400
 
+  &--theme-blue
+    background-color #2297d8
+
   //Элемент заголовок
   &__title
     margin-top 0
@@ -54,13 +57,28 @@
       font-family Montserrat, sans-serif;
       text-transform uppercase
 
+    &--small-text
+      font-size 12px
+      font-weight 600
+      font-family Montserrat, sans-serif;
+      text-transform uppercase
+
+
     &--black-text
       color #363636
+
+    &--white-text
+      color #ffffff
 
   //Элемент info-wrap
   &__info-wrap
     display block
     margin 40px 0
+    text-align center
+
+  &__company-video-wrap
+    width 120px
+    margin 70px auto
     text-align center
 
 
@@ -72,6 +90,13 @@
       line-height 22px
       font-family Montserrat, sans-serif;
       color #363636
+
+  //Элемент подпись иконки
+  &__icon-caption
+    display block
+    position relative
+    top 160px
+    text-align center
 
   //Элемент кнопка по центру по горизонтали
   &__button-center
