--- a/app/stylus/main.styl
+++ b/app/stylus/main.styl
@@ -428,3 +428,6 @@ body
 
 /*===============================Блок кнопка============================*/
 @import "blocks/button/button.styl"
+
+/*===============================Блок иконка============================*/
+@import "blocks/icon/icon.styl"
