--- a/app/views/body/home-page/home-page.pug
+++ b/app/views/body/home-page/home-page.pug
@@ -15,3 +15,10 @@ div.main.main_theme-white-gr
                     sup.unit__info.unit__info--med-text.unit__info--black-text /03
 
             input.button.button--theme-arrow.button--arrow-prev.button--white-bg.unit__button-center(type="button", value="")
+
+        div.unit.unit--theme-company-video.unit--theme-blue
+            div.unit__company-video-wrap
+                button.icon.icon--theme-circle.icon--blue-bg
+                    div.icon.icon--theme-play-arrow
+
+                span.unit__info.unit__info--small-text.unit__info--white-text Company video
