--- a/app/stylus/main.styl
+++ b/app/stylus/main.styl
@@ -202,6 +202,11 @@ body
     display inline-block
     vertical-align top
 
+  &__double-unit-horiz
+    position relative
+    display inline-block
+    width 586px
+    font-size 0
 
 /*!!!!!!=============Информационный блок=======================!!!!!*/
 @import "blocks/unit/unit.styl"
