--- a/app/views/body/home-page/home-page.pug
+++ b/app/views/body/home-page/home-page.pug
@@ -22,3 +22,15 @@ div.main.main_theme-white-gr
                     div.icon.icon--theme-play-arrow
 
                 span.unit__info.unit__info--small-text.unit__info--white-text Company video
+
+        div.unit.unit--theme-info
+            h2.unit__title.unit__title--big-bold.unit__title--text-width Our services
+            hr.unit__horizontal.unit__horizontal--black-solid
+            p.unit__article.unit__article--theme-unit-black-text.unit__article--gray-text Our mission is to provide the highest level of service for our client-partners from concept through construction.
+
+
+        div.unit.unit--theme-foto
+        div.unit.unit--theme-info
+            h3.unit__title.unit__title--bold.unit__title--text-width General Contracting
+            hr.unit__horizontal.unit__horizontal--black-solid
+            p.unit__article.unit__article--theme-unit-black-text.unit__article--gray-text This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.
