--- a/app/stylus/blocks/icon/icon.styl
+++ b/app/stylus/blocks/icon/icon.styl
@@ -17,3 +17,7 @@
     margin-left 28px
     background url("../img/play-arrow.png") no-repeat center
 
+  &--theme-pdf
+    height 71px
+    margin-bottom 16px
+    background url("../img/icon-pdf.png") no-repeat center
