--- a/app/stylus/blocks/unit/unit.styl
+++ b/app/stylus/blocks/unit/unit.styl
@@ -1,7 +1,7 @@
 .unit
   width 233px
   height 233px
-  padding 30px 30px
+  padding 30px
 
   //Блок вытянутый по горизонтали в два раза
   &--horizontal-double-unit
@@ -25,10 +25,13 @@
   &--theme-blue
     background-color #2297d8
 
+  &--white
+    background-color #ffffff
+
   //Элемент заголовок
   &__title
     margin-top 0
-    margin-bottom .5em
+    margin-bottom .7em
     font-size 14px
 
     &--bold
@@ -97,6 +100,10 @@
   &__company-video-wrap
     width 120px
     margin 70px auto
+    text-align center
+
+  &__download-price-wrap
+    margin-top 70px
     text-align center
 
 
