--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -8,7 +8,7 @@ html
         link(rel='stylesheet' href='css/main.css')
     body
         // Шапка сайта
-        include header/header.pug
+        //include header/header.pug
         //Тело сайта
         include body/home-page/home-page
         //Футтер
