--- a/app/views/body/home-page/home-page.pug
+++ b/app/views/body/home-page/home-page.pug
@@ -34,3 +34,21 @@ div.main.main_theme-white-gr
             h3.unit__title.unit__title--bold.unit__title--text-width General Contracting
             hr.unit__horizontal.unit__horizontal--black-solid
             p.unit__article.unit__article--theme-unit-black-text.unit__article--gray-text This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.
+
+        div.unit.unit--white
+            h2.unit__title.unit__title--bold.unit__title--text-width Project design and engineering
+            hr.unit__horizontal.unit__horizontal--black-solid
+            p.unit__article.unit__article--theme-unit-black-text.unit__article--gray-text Through Stage-Gate, Design and Engineering methodology, DMCS ensure client-partners realize clearly defined project objective to achieve intended results.
+
+        div.unit.unit--theme-foto
+        div.unit.unit--white
+            h2.unit__title.unit__title--bold.unit__title--text-width Capital improvements
+            hr.unit__horizontal.unit__horizontal--black-solid
+            p.unit__article.unit__article--theme-unit-black-text.unit__article--gray-text This results in scope creep and slippage of the schedule that ultimately result in additional costs to the owner.
+
+        div.unit.unit--theme-yellow
+            div.unit__download-price-wrap
+                div.icon.icon--theme-pdf
+                span.unit__info.unit__info--small-text.unit__info--black-text Download price
+
+        div.unit.unit--theme-blue
