В home_page добавлен информационные блоки c иконкой contact us. Временно отключен header

--- a/app/stylus/blocks/icon/icon.styl
+++ b/app/stylus/blocks/icon/icon.styl
@@ -21,3 +21,14 @@
     height 71px
     margin-bottom 16px
     background url("../img/icon-pdf.png") no-repeat center
+
+  &--theme-contact-circle
+    height 54px
+    background url("../img/contact-circle.png") no-repeat center
+
+  &--theme-play-arrow-down
+    position relative
+    top -8px
+    height 28px
+    margin-bottom 5px
+    background url("../img/play-arrow-down.png") no-repeat center
