--- a/app/stylus/blocks/unit/unit.styl
+++ b/app/stylus/blocks/unit/unit.styl
@@ -106,6 +106,10 @@
     margin-top 70px
     text-align center
 
+  &__contact-us-wrap
+    margin-top 70px
+    text-align center
+
 
   //Элемент article
   &__article
