--- a/app/css/main.css
+++ b/app/css/main.css
@@ -309,6 +309,10 @@ body {
   margin-top: 70px;
   text-align: center;
 }
+.unit__contact-us-wrap {
+  margin-top: 70px;
+  text-align: center;
+}
 .unit__article {
   font-size: 14px;
 }
@@ -606,4 +610,15 @@ body {
   height: 71px;
   margin-bottom: 16px;
   background: url("../img/icon-pdf.png") no-repeat center;
+}
+.icon--theme-contact-circle {
+  height: 54px;
+  background: url("../img/contact-circle.png") no-repeat center;
+}
+.icon--theme-play-arrow-down {
+  position: relative;
+  top: -8px;
+  height: 28px;
+  margin-bottom: 5px;
+  background: url("../img/play-arrow-down.png") no-repeat center;
 }
