--- a/app/views/body/home-page/home-page.pug
+++ b/app/views/body/home-page/home-page.pug
@@ -52,3 +52,7 @@ div.main.main_theme-white-gr
                 span.unit__info.unit__info--small-text.unit__info--black-text Download price
 
         div.unit.unit--theme-blue
+            div.unit__contact-us-wrap
+                div.icon.icon--theme-contact-circle
+                div.icon.icon--theme-play-arrow-down
+                span.unit__info.unit__info--small-text.unit__info--white-text Contact us
