--- a/app/stylus/blocks/unit/unit.styl
+++ b/app/stylus/blocks/unit/unit.styl
@@ -28,6 +28,9 @@
   &--white
     background-color #ffffff
 
+  &--transparent
+    background-color transparent
+
   //Элемент заголовок
   &__title
     margin-top 0
@@ -109,6 +112,9 @@
   &__contact-us-wrap
     margin-top 70px
     text-align center
+
+  &__form-search-wrap
+    margin-top 100px
 
 
   //Элемент article
