--- a/app/stylus/main.styl
+++ b/app/stylus/main.styl
@@ -341,22 +341,23 @@ body
     bottom -52px
 
 /*===========================Блок форма==============================*/
-.form
-  //элемент поле ввода
-  &__input
-
-    &_theme-text
-      font-family Montserrat, sans-serif;
-      font-size 14px
-      font-weight 600
-
-    &_theme-blue-text
-      color #59a9d6
-
-    &_theme-aside-input
-      width 100%
-      padding 13px 7px
-      box-sizing border-box
+@import "blocks/form/form.styl"
+//.form
+//  //элемент поле ввода
+//  &__input
+//
+//    &_theme-text
+//      font-family Montserrat, sans-serif;
+//      font-size 14px
+//      font-weight 600
+//
+//    &_theme-blue-text
+//      color #59a9d6
+//
+//    &_theme-aside-input
+//      width 100%
+//      padding 13px 7px
+//      box-sizing border-box
 
   //Элемент submit
   &__submit
