--- a/app/views/body/home-page/home-page.pug
+++ b/app/views/body/home-page/home-page.pug
@@ -56,3 +56,11 @@ div.main.main_theme-white-gr
                 div.icon.icon--theme-contact-circle
                 div.icon.icon--theme-play-arrow-down
                 span.unit__info.unit__info--small-text.unit__info--white-text Contact us
+
+        div.unit.unit--horizontal-double-unit.unit--transparent
+            div.unit__form-search-wrap
+                form.form
+                    input.form__input.form__input--theme-unit-search.form__input--border-bottom-only.form__input--border-white(type="text", name="search-text", value="What you're looking for")
+                    button.form__button.form__button--right-button.form__button--theme-search-button
+                        i.form__button-icon(class="fa fa-search", aria-hidden="true")
+                    //input.form__button.form__button--right-button.form__button--theme-search-button(type="submit", value="O")
