--- a/app/stylus/blocks/icon/icon.styl
+++ b/app/stylus/blocks/icon/icon.styl
@@ -32,3 +32,18 @@
     height 28px
     margin-bottom 5px
     background url("../img/play-arrow-down.png") no-repeat center
+
+  &--person-avatar
+    height 60px
+    margin-bottom 19px
+    background url("../img/avatar.png") no-repeat center
+
+  &--person-rate4
+    height 14px
+    margin-top 10px
+    background url("../img/rate4.png") no-repeat center
+
+  &--person-rate1none
+    height 14px
+    background url("../img/rate1none.png") no-repeat center
+
