--- a/app/stylus/blocks/unit/unit.styl
+++ b/app/stylus/blocks/unit/unit.styl
@@ -87,6 +87,10 @@
       font-family Montserrat, sans-serif;
       text-transform uppercase
 
+    &--norm-bold-text
+      font-size 14px
+      font-weight 900
+      font-family Montserrat, sans-serif
 
     &--black-text
       color #363636
@@ -116,6 +120,8 @@
   &__form-search-wrap
     margin-top 100px
 
+  &__person-info-wrap
+    text-align center
 
   //Элемент article
   &__article
@@ -128,6 +134,12 @@
 
     &--gray-text
       color #a0a0a0
+
+    &--centered-text
+      text-align center
+
+    &--text-ind
+      text-indent .1em
 
   //Элемент подпись иконки
   &__icon-caption
