--- a/app/views/body/home-page/home-page.pug
+++ b/app/views/body/home-page/home-page.pug
@@ -63,4 +63,11 @@ div.main.main_theme-white-gr
                     input.form__input.form__input--theme-unit-search.form__input--border-bottom-only.form__input--border-white(type="text", name="search-text", value="What you're looking for")
                     button.form__button.form__button--right-button.form__button--theme-search-button
                         i.form__button-icon(class="fa fa-search", aria-hidden="true")
-                    //input.form__button.form__button--right-button.form__button--theme-search-button(type="submit", value="O")
+
+        div.unit.unit--horizontal-double-unit.unit--white
+            div.unit__person-info-wrap
+                div.icon.icon--person-avatar
+                span.unit__info.unit__info--norm-bold-text Martin H.Jhonsons
+                div.icon.icon--person-rate4
+
+            p.unit__article.unit__article--text-ind.unit__article--centered-text.unit__article--theme-unit-black-text.unit__article--gray-text Together, we'll couple our knowledge, expertise, and innovative capabilities with your astute knowledge of your business—to maximize and optimize results. This is all accomplished in a number of ways.
