--- a/app/stylus/blocks/unit/unit.styl
+++ b/app/stylus/blocks/unit/unit.styl
@@ -135,6 +135,9 @@
     &--gray-text
       color #a0a0a0
 
+    &--text-width419
+      width 419px
+
     &--centered-text
       text-align center
 
@@ -157,3 +160,7 @@
   &__button-buttom-left
     position relative
     top 21px
+
+  //Элемент кнопка в левой части под очередным блоком
+  &__button-left
+    margin-top 10px;
