--- a/app/stylus/blocks/button/button.styl
+++ b/app/stylus/blocks/button/button.styl
@@ -1,9 +1,7 @@
 .button
   font-size 12px
   &--theme-unit-btn
-    width 123px
-    height 46px
-
+    padding 15px 23px 15px 24px
     font-weight 600
     font-family Montserrat, sans-serif;
     text-transform uppercase
