--- a/app/views/body/home-page/home-page.pug
+++ b/app/views/body/home-page/home-page.pug
@@ -71,3 +71,9 @@ div.main.main_theme-white-gr
                 div.icon.icon--person-rate4
 
             p.unit__article.unit__article--text-ind.unit__article--centered-text.unit__article--theme-unit-black-text.unit__article--gray-text Together, we'll couple our knowledge, expertise, and innovative capabilities with your astute knowledge of your business—to maximize and optimize results. This is all accomplished in a number of ways.
+
+        div.unit.unit--horizontal-double-unit
+            h2.unit__title.unit__title--big-bold.unit__title--theme-unit-black-title Your building is in good hands
+            hr.unit__horizontal.unit__horizontal--black-solid
+            p.unit__article.unit__article--theme-unit-black-text.unit__article--text-width419 Our mission is to provide the highest level of service for our client-partners from concept through construction.
+            input.button.button--theme-unit-btn.button--black-bg.button--text-white(type="button", value="About company")
