--- a/app/stylus/blocks/icon/icon.styl
+++ b/app/stylus/blocks/icon/icon.styl
@@ -47,3 +47,8 @@
     height 14px
     background url("../img/rate1none.png") no-repeat center
 
+  &--person-rate5
+    height 14px
+    margin-top 10px
+    background url("../img/rate5.png") no-repeat center
+
