--- a/app/stylus/blocks/unit/unit.styl
+++ b/app/stylus/blocks/unit/unit.styl
@@ -28,6 +28,9 @@
   &--white
     background-color #ffffff
 
+  &--soft-gold
+    background-color #fcf3d3
+
   &--transparent
     background-color transparent
 
@@ -65,6 +68,18 @@
 
     &--black-solid
       border solid #363636
+
+    &--width-small
+      width 21px
+
+    &--opasity-half
+      opacity .5
+
+    &--inline
+      display inline-block
+      margin-right 15px
+      &:last-child
+        margin-right 0
 
   //Элемент для информации
   &__info
@@ -123,6 +138,10 @@
   &__person-info-wrap
     text-align center
 
+  &__horiz-inline-center-wrap
+    font-size 0
+    text-align center
+
   //Элемент article
   &__article
     font-size 14px
@@ -135,6 +154,9 @@
     &--gray-text
       color #a0a0a0
 
+    &--grey-yellow-text
+      color #777463
+
     &--text-width419
       width 419px
 
@@ -142,7 +164,7 @@
       text-align center
 
     &--text-ind
-      text-indent .1em
+      text-indent .5em
 
   //Элемент подпись иконки
   &__icon-caption
